# pytorch-examples

./: README.md
beginner_tutorials/dl_with_pytorch/: autograd.ipynb  training_a_classifier.ipynb
beginner_tutorials/learning_pytorch_with_examples/: tensors.ipynb
cnn/: alexnet.py  lenet.py  resnet.py  shufflenet.py
cpp/conv_mnist/: CMakeLists.txt  mnist.cc
cpp/example_app/: CMakeLists.txt  example_app.cc
cpp/own_dataset/: CMakeLists.txt  dataset.cc
cpp/simple_mnist/: CMakeLists.txt  mnist.cc  simple_mnist.cc
gan/: metrics.py  mnist_dcgan.ipynb  mnist_gan.ipynb
gan/dcgan/: models.py  train.py
linear/: linear_regression.py  logistic_regression.py
mnist/: mnist.py  mnist_conv.py
pytorch_tutorials/beginner_tutorials/dl_with_pytorch/: data_parallelism.ipynb  neural_networks.ipynb  what_is_pytorch.ipynb
pytorch_tutorials/beginner_tutorials/learning_pytorch_with_examples/: Untitled.ipynb  nn_module.ipynb  tensors.ipynb
pytorch_tutorials/beginner_tutorials/transfer_learning_tutorial/: load_data.ipynb
vae/: models.py
